Key_error 추가설명 및 명세 수정 중
